--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,11 @@
     "files.associations": {
         "headerutilities.h": "c",
         "headerrequests.h": "c",
-        "globals.h": "c"
+        "globals.h": "c",
+        "printingmanager.h": "c",
+        "server_manager.h": "c",
+        "headermain.h": "c"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "cmake.sourceDirectory": "/home/arie/Desktop/Project_S_C/Server"
 }
