--- a/Server/makefile
+++ b/Server/makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra
 
 # List of source files
-SRCS = create_server.c deliting_server.c Globals.c main_server.c requests_server.c send_prints.c server.c Testing.c Tree.c Utilities.c
+SRCS = Create.c Deliting.c Globals.c MainServer.c Requests.c SendPrints.c Server.c Testing.c Tree.c Utilities.c
 
 # Output executable
 TARGET = main
