Deleting unnecessary functions

--- a/Client/makefile
+++ b/Client/makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra
 
 # List of source files
-SRCS = client.c create_client.c Globals.c main_client.c Utilities.c
+SRCS = Client.c MainClient.c Utilities.c
 
 # Output executable
 TARGET = main
